--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
   <div>
-    <img class="portada"  src="./imagenes/portada.png" alt="" srcset="">
+    <img class="portada"  src="./IMAGENES/portada.png" alt="" srcset="">
   </div>
   
   <button class="click" id="botonn"><span class="melodia">❚❚</span></button>
