--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
   <div class="preloader">
-    <img class="amor" src="./imagenes/784b5a08e4510afcf76344f1b90eaa22.gif" alt="">
+    <img class="amor" src="./IMAGENES/784b5a08e4510afcf76344f1b90eaa22.gif" alt="">
    </div>
 <div>
 
@@ -110,7 +110,7 @@
  
      <section class="seccion-fiesta">
       <h2 class="fiesta">La Fiesta</h2>
-      <img class="copas" src="./imagenes/COPAS.png" alt="">
+      <img class="copas" src="./IMAGENES/COPAS.png" alt="">
       <p class="parrafodos"> Día: 30 de Agosto del 2025 <br>
         Horario: 21:00 Hs <br> Salón: Complejo la Aventura. <br> </p>
     
@@ -123,7 +123,7 @@
     <br>
   
     <p class="fiesta"> ¿Venís?</p> 
-    <img class="form" src="./imagenes/formulario-de-contacto.png" alt="">
+    <img class="form" src="./IMAGENES/formulario-de-contacto.png" alt="">
           <p class="parrafodos">Te agradezco que me <br> confirmes 
             tu asistencia antes <br> del 5
              de agosto <br> para agregarte a mi lista <br> de invitados.</p> 
@@ -145,7 +145,7 @@
 
            <section class="seccion-fiesta">
             <h2 class="fiesta">Dress Code</h2>
-            <img class="copas" src="./imagenes/percha.png" alt="">
+            <img class="copas" src="./IMAGENES/percha.png" alt="">
             <p class="parrafodos"> Elegante </p>
 
 
