--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div>
 
 
-  <audio class="audio" src="./musica/" controls>
+  <audio class="audio" src="./Ariana Grande - pov (official audio).mp3" controls>
   </audio>
   
 
@@ -106,6 +106,32 @@
      esperamos, uno de esos momentos ha llegado.</h2>
   
   
+  
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+
+    <div class="carousel-item active">
+      <img src="./imagenes/1.jpeg">
+    </div>
+    <div class="carousel-item">
+      <img src="./imagenes/2.jpeg">
+    </div>
+    <div class="carousel-item">
+      <img src="./imagenes/3.jpeg">
+    </div>
+   
+    
+  </div>
+  
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 <img class="dorado" src="./IMAGENES/linea.png" alt="">
  
      <section class="seccion-fiesta">
@@ -155,6 +181,70 @@
 
 <br><br>
 
+<section class="seccion-regalo">
+  <p class="obsequio">Regalo </p>
+  <img class="regalo" src="./imagenes/regalo.png" alt="">
+  
+  <p class="parrafo3"> El regalo es opcional pero <br> tu presencia indispensable.<br> 
+     Si deseas regalarme algo <br> y no sabes que, podes dejar que  <br> yo lo 
+     elija depositando  <br> la cantidad que quieras en un sobre  <br> o mandarme a mi Mercado pago. <br>   </p>
+
+ 
+<button class="click2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+ Regalo
+ </button>
+</p>
+
+</div>
+
+
+<div class="collapse" id="collapseExample">
+<div class="card card-body">
+ <p class="parrafoDe">
+<br>
+
+Alias: viclujan.mp <br>
+ CBU: 0000003100014479021558
+<br>
+<br>
+
+</div>
+</div>
+  
+</section>
+ 
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+
+    <div class="carousel-item active">
+      <img src="./imagenes/4.jpeg">
+    </div>
+    <div class="carousel-item">
+      <img src="./imagenes/5.jpeg">
+    </div>
+    <div class="carousel-item">
+      <img src="./imagenes/6.jpeg">
+    </div>
+   
+    
+  </div>
+  
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+
+
+
+<p class="esperamos">¡Te espero!</p>
+
+        <img class="final" src="./imagenes/victoria.png" alt="">
 
   <script>
     window.addEventListener('load', () => {
