--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
   <div class="preloader">
-    <img class="amor" src="./IMAGENES/784b5a08e4510afcf76344f1b90eaa22.gif" alt="">
+    <img class="amor" src="./imagenes/784b5a08e4510afcf76344f1b90eaa22.gif" alt="">
    </div>
 <div>
 
@@ -42,7 +42,7 @@
 
 
   <div>
-    <img class="portada"  src="./IMAGENES/portada.png" alt="" srcset="">
+    <img class="portada"  src="./imagenes/portada.png" alt="" srcset="">
   </div>
   
   
@@ -132,7 +132,7 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-<img class="dorado" src="./IMAGENES/linea.png" alt="">
+<img class="dorado" src="./imagenes/linea.png" alt="">
  
      <section class="seccion-fiesta">
       <h2 class="fiesta">La Fiesta</h2>
@@ -149,7 +149,7 @@
     <br>
   
     <p class="fiesta"> ¿Venís?</p> 
-    <img class="form" src="./IMAGENES/formulario-de-contacto.png" alt="">
+    <img class="form" src="./imagenes/formulario-de-contacto.png" alt="">
           <p class="parrafodos">Te agradezco que me <br> confirmes 
             tu asistencia antes <br> del 5
              de agosto <br> para agregarte a mi lista <br> de invitados.</p> 
@@ -157,21 +157,21 @@
 
 
    
-             <a class="a" href="https://wa.me/549" target="_blank">
-              <img class="chat" src="./IMAGENES/whatsap.png""></a>
+             <a class="a" href="https://wa.me/5493764693170" target="_blank">
+              <img class="chat" src="./imagenes/whatsap.png""></a>
           
-              <img class="vicky" src="./IMAGENES/vicky.jpg" alt="">
+              <img class="vicky" src="./imagenes/vicky.jpg" alt="">
            <br>
   
   
 <br><br>
-<img class="hojas" src="./IMAGENES/7909e1395880c3b5fc52631791e6c3ff.jpg" alt="">
+<img class="hojas" src="./imagenes/7909e1395880c3b5fc52631791e6c3ff.jpg" alt="">
 
 
 
            <section class="seccion-fiesta">
             <h2 class="fiesta">Dress Code</h2>
-            <img class="copas" src="./IMAGENES/percha.png" alt="">
+            <img class="copas" src="./imagenes/percha.png" alt="">
             <p class="parrafodos"> Elegante </p>
 
 
