--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
            <section class="seccion-fiesta">
             <h2 class="fiesta">Dress Code</h2>
             <img class="copas" src="./imagenes/percha.png" alt="">
-            <p class="parrafodos"> Elegante </p>
+            <p class="parrafodos"> Elegante <br> No se puede llevar color <br>
+            blanco, beige o azul.</p>
 
 
 
